--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -30,9 +30,9 @@ jobs:
         
     - name: Extract metadata (tags, labels) for Docker
       id: meta
-      uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+      uses: docker/metadata-action@v3
       with:
-        images: xushengbin/ubuntu-networking
+        images: FangZiyue/workshop
         
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
